# hrp

./: .gitignore  Cargo.toml  README.md  build.rs
share/: google-10000-english-usa-no-swears-medium.txt
src/: args.rs  err.rs  main.rs
