[package]
name = "hrp"
description = "generate human-readable passwords"
version = "0.1.2"
authors = ["Ian Brault <ian@brault.dev>"]
edition = "2021"
repository = "https://github.com/ianbrault/hrp"
documentation = "https://github.com/ianbrault/hrp"
readme = "README.md"
license = "GPL-3.0"
categories = ["command-line-utilities", "cryptography"]
keywords = ["password", "passwords", "generate"]

[dependencies]
colored = "2.1"
lazy_static = "1.5"
sodiumoxide = "0.2.7"
